--- a/src/Components/ComingSoon/comingSoon.css
+++ b/src/Components/ComingSoon/comingSoon.css
@@ -1,4 +1,36 @@
 .container{
+    display:flex;
+    flex-direction: row;
     background-color: #000000;
-    height:100vh;
+    height: 100vh;
+}
+
+.rightContainer{
+    display: flex;
+    padding-left:50px;
+    width: 40%;
+    align-items: center;
+}
+
+.leftContainer{
+    padding:50px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.comingSoonText{
+    color:#ffffff;
+    font-weight: 600px;
+    font-size:42px;
+    padding-bottom:10px;
+}
+
+.notifyMeText{
+    color:#892CDC;
+    font-size:28px;
+    font-weight: 600px;
+    padding-bottom: 10px;
 }
