added new icons

--- a/src/Components/ComingSoon/comingSoon.css
+++ b/src/Components/ComingSoon/comingSoon.css
@@ -29,7 +29,7 @@
 }
 
 .notifyMeText{
-    color:#892CDC;
+    color:#6c63ff;
     font-size:28px;
     font-weight: 600px;
     padding-bottom: 10px;
