--- a/src/Components/TextInputWithButton/textInputWithButton.css
+++ b/src/Components/TextInputWithButton/textInputWithButton.css
@@ -1,9 +1,10 @@
 .container{
     display: flex;
+    
 }
 
 .buttonContainer{
-    background-color: #892CDC;
+    background-color: #6c63ff;
     color:#ffffff;
     font-weight: 600;
     padding: 0 15px;
