--- a/src/Components/ComingSoon/comingSoon.css
+++ b/src/Components/ComingSoon/comingSoon.css
@@ -5,16 +5,16 @@
     height: 100vh;
 }
 
-.rightContainer{
+.leftContainer{
     display: flex;
     padding-left:50px;
     width: 40%;
     align-items: center;
 }
 
-.leftContainer{
-    padding:50px;
-    width: 60%;
+.rightContainer{
+    padding-left:50px;
+    width: calc( 60% - 50px );
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,4 +33,31 @@
     font-size:28px;
     font-weight: 600px;
     padding-bottom: 10px;
+}
+
+@media (max-width:420px) {
+    .container{
+        flex-direction: column;
+        min-height: 100vh;
+        height: fit-content;
+    }
+
+    .rightContainer{
+        height: fit-content;
+        width: 100%;
+        padding:0;
+    }
+
+    .leftContainer{
+        width: 100%;
+        padding:30px 0;
+    }
+
+    .comingSoonText{
+        font-size:32px;
+    }
+    
+    .notifyMeText{
+        font-size:20px;
+    }
 }
