--- a/src/Components/TextInputWithButton/textInputWithButton.css
+++ b/src/Components/TextInputWithButton/textInputWithButton.css
@@ -17,6 +17,8 @@
     font-weight: 600;
     padding: 0 15px;
     border:none;
+    border-bottom-right-radius:5px;
+    border-top-right-radius:5px;
 }
 
 .buttonContainer:active,
