--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -20,11 +20,18 @@
 
 @media (max-width:420px){
     .headerContainer{
-        padding: 30px 0 0 0;
+        padding: 25px 0 0 0;
     }
 
     .icon{
-        left:50%;
-        transform: translateX(50%);
+        margin-left:20px;
+        width:120px;
+    }
+
+    .rightSide{
+        position: absolute;
+        right: 20px;
+        font-size: 20px;
+        color: #4a47a3;
     }
 }
